<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="379dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/mynotes1"
            android:drawableRight="@drawable/filedownload"/>


    </com.google.android.material.card.MaterialCardView>




    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="379dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1" >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/mynotes2"
            android:drawableRight="@drawable/filedownload"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3"
        android:layout_width="379dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2" >

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/myassignments1"
            android:drawableRight="@drawable/filedownload"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card4"
        android:layout_width="379dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card3" >

        <Button
            android:id="@+id/buttonassignment2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/myassignments2"
            android:drawableRight="@drawable/filedownload"/>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Topic 1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="40dp" />

    <Button
        android:id="@+id/button_send"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/goback"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="537dp"
        tools:ignore="MissingConstraints"
        android:drawableLeft="@drawable/moveback"/>


</androidx.constraintlayout.widget.ConstraintLayout>